# ctk

./: .gitignore  CMakeLists.txt  README.md  ctk-project.pro
benchmark/image/: CMakeLists.txt  image.pro  main.cpp
benchmark/image/binimage/: CMakeLists.txt  main.cpp
benchmark/image/rgbimage/: CMakeLists.txt  main.cpp
benchmark/matrices/: CMakeLists.txt  main.cpp  matrices.pro
benchmark/primenumbers/: CMakeLists.txt  benchprimnums.pro  main.cpp  primenumbers.pro
ctk/: CMakeLists.txt  cgvectoraux.cpp  ctk.pro  ctkabstractmatrix.cpp  ctkabstractmatrix.h  ctkauthentication.cpp  ctkauthentication.h  ctkauthobject.cpp  ctkauthobject.h  ctkbinarymatrix.cpp  ctkbinarymatrix.h  ctkcontours.cpp  ctkcontours.h  ctkexceptions.h  ctkimage.cpp  ctkimage.h  ctkmath.cpp  ctkmath.h  ctknumericmatrix.cpp  ctknumericmatrix.h  ctkpoint.h  ctkpolygon.cpp  ctkpolygon.h  ctkvectoraux.cpp  ctkvectoraux.h
ctk/authentication/: auth_object.cpp  auth_object.h  authentication.cpp  authentication.h  ctkauth_object.cpp  ctkauth_object.h  ctkauthentication.h
ctk/core/: exceptions.h
ctk/geometry/: ctkpoint.h  ctkpolygon.cpp  point.h  polygon.cpp  polygon.h
ctk/image/: abstract_image.cpp  abstract_image.h  binary_image.cpp  binary_image.h  ctkimage.cpp  ctkimage.h  gray_image.cpp  gray_image.h  image.cpp  image.h  image_comparator.h  rgb_image.cpp  rgb_image.h
ctk/img_proc/: contours.cpp  contours.h  ctkcontours.cpp  ctkcontours.h
ctk/math/: byte_numbers.cpp  byte_numbers.h  ctkprime_numbers.cpp  prime_numbers.cpp  prime_numbers.h
ctk/matrix/: abstract_matrix.cpp  abstract_matrix.h  ctkabstractmatrix.cpp  ctkabstractmatrix.h  ctknumericmatrix.cpp  ctknumericmatrix.h  numeric_matrix.cpp  numeric_matrix.h
ctk/misc/: ctktypes.h  ctkvectoraux.cpp  ctkvectoraux.h  filesys.cpp  filesys.h  spatial_ordering.cpp  spatial_ordering.h  string_aux.cpp  string_aux.h  vector_aux.cpp  vector_aux.h
ctkunittests/: CMakeLists.txt  binary_image_test.cpp  binary_image_test.h  byte_numbers_test.cpp  byte_numbers_test.h  ctkbinaryimagetest.cpp  ctkgrayimagetest.cpp  ctkgrayimagetest.h  ctkpointtest.cpp  ctkpolygontest.cpp  ctkprime_numbers_test.cpp  ctkrgbimagetest.cpp  ctktestsetup.h  ctkunittests.pro  ctkvecauxtest.cpp  ctkvecauxtest.h  filesys_test.cpp  filesys_test.h  gray_image_test.cpp  gray_image_test.h  gtest_dependency.pri  image_comparator_test.cpp  image_comparator_test.h  numeric_matrix_test.cpp  numeric_matrix_test.h  point_test.cpp  point_test.h  polygon_test.cpp  polygon_test.h  prime_numbers_test.cpp  prime_numbers_test.h  rgb_image_test.cpp  rgb_image_test.h  string_aux_test.cpp  test_setup.h  vector_aux_test.cpp
demos/demimg/: canvas.cpp  canvas.h  demimg.pro  mainwindow.ui
demos/gauss_elimination/: CMakeLists.txt  main.cpp
demos/mosaic/: CMakeLists.txt  main.cpp
demos/video_rotations/: main.cpp  video_rotations.pro  videogenerator.cpp  videogenerator.h
test/: ctkbinarymatrixtest.h  ctkgrayimagetest.cpp  ctkmathtest.cpp  ctkmathtest.h  ctknumericmatrixtest.cpp  ctkrgbimagetest.cpp  ctkvecauxtest.cpp  main.cpp  testlib.pro
unittests/: ctkbinaryimagetest.cpp  ctkbinaryimagetest.h  ctkbinarymatrixtest.cpp  ctkgrayimagetest.cpp  ctkmathtest.cpp  ctknumericmatrixtest.cpp  ctknumericmatrixtest.h  ctkpointtest.cpp  ctkpointtest.h  ctkpolygontest.cpp  ctkpolygontest.h  ctkrgbimagetest.cpp  ctkrgbimagetest.h  ctktestsetup.h  ctkvecauxtest.cpp  ctkvecauxtest.h  main.cpp  unittests.pro
utils/filesys/: filesys.pro  filesystem.cpp  filesystem.h
